Trying to MVC our Java classes